Improved FileRepository methods