@@ -7,11 +7,9 @@ package com.borak.kinweb.backend.repository.util;
 import com.borak.kinweb.backend.config.ConfigProperties;
 import com.borak.kinweb.backend.domain.dto.classes.MyImage;
 import com.borak.kinweb.backend.exceptions.DatabaseException;
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
@@ -25,29 +23,20 @@ public class FileRepository {
     @Autowired
     ConfigProperties config;
 
+    
     public void saveMediaCoverImage(MyImage image) {
-//        try {
-//            image.getFile().transferTo(new File(config.getMediaImagesFolderPath() + image.getFullName()));
-//        } catch (IOException e) {
-//            e.printStackTrace();
-//            throw new DatabaseException("Unable to store media cover image");
-//        }
-
-    }
-
-    public void deleteIfExists(String filePath) throws DatabaseException {
         try {
-            Files.deleteIfExists(Paths.get(filePath));
-        } catch (IOException e) {
-            throw new DatabaseException("Unable to delete file");
+            Files.write(Path.of(config.getMediaImagesFolderPath() + image.getFullName()), image.getBytes());
+        } catch (IOException ex) {
+            throw new DatabaseException("Unable to save media cover image");
         }
     }
 
-    public boolean doesFileExist(String filePath) {
+    public void deleteIfExistsMediaCoverImage(String imageName) {
         try {
-            return Files.exists(Path.of(filePath));
-        } catch (Exception e) {
-            throw new DatabaseException("Unable to see if file exists");
+            Files.deleteIfExists(Path.of(config.getMediaImagesFolderPath() + imageName));
+        } catch (IOException ex) {
+            throw new DatabaseException("Unable to delete media cover image");
         }
     }
 
